--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "envalid": "^7.3.1",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
-    "graphql-upload": "^16.0.2",
+    "graphql-upload": "^12.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
     "redis": "^4.6.5",
+    "uuid": "^9.0.0",
     "validator": "^13.9.0"
   }
 }
