--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "jest",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./src/server.js"
   },
   "author": "",
@@ -31,8 +31,6 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.0",
-    "jest": "^29.5.0",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.0.5"
+    "jest": "^29.5.0"
   }
 }
